# base

./: .gitignore  CMakeLists.txt  README.md  main.cpp
client/: client.cpp  client.h
client/core/atlas/: atlas.cpp  atlas.h
client/core/console/: console.cpp  console.h
client/core/drawing/: drawing.cpp  drawing.h
client/core/engine_prediction/: engine_prediction.cpp  engine_prediction.h
client/core/global_addresses/: global_addresses.cpp  global_addresses.h
client/core/hooks/: hooks.cpp  hooks.h
client/core/interfaces/: interfaces.cpp  interfaces.h
client/core/lag_compensation/: lag_compensation.cpp  lag_compensation.h
client/core/menu/: menu.cpp  menu.h
client/core/menu/custom_widgets/: imgui_custom_widgets.cpp  imgui_custom_widgets.h
client/core/netvars/: netvars.cpp  netvars.h
client/core/offsets/: offsets.cpp  offsets.h
client/core/render/: render.cpp  render.h
valve/: animation_layer.h  app_system.h  base_client_dll.h  base_weapon.h  bone.h  client_base_entity.h  client_class.h  client_local_player.h  client_player.h  client_state.h  color.h  convar.h  cusercmd.h  cvar.h  datamap.h  debug_overlay.h  engine_client.h  engine_trace.h  entity_list.h  game_event.h  game_movement.h  global_vars_base.h  hud_chat.h  input.h  input_system.h  interface_reg.h  key_values.cpp  key_values.h  lag_record.cpp  lag_record.h  material.h  material_system.h  matrix3x4.h  model_info.h  model_render.h  model_render_info.h  move_data.h  move_helper.h  move_type.h  net_channel.h  (+18 more)
valve/entities/: base_weapon.h  client_base_entity.h  client_local_player.h  client_player.h
valve/entities/entity/: base_animating.cpp  base_animating.h  base_combat_character.h  base_entity.cpp  base_entity.h  client_entity.h  client_networkable.h  client_renderable.h  client_unknown.h  collideable.h
valve/entities/player/: base_player.cpp  base_player.h  cs_player.cpp  cs_player.h
valve/entities/weapon/: base_combat_weapon.h  cs_weapon.h  cs_weapon_data.h
valve/lagcompensation/: lag_record.h
valve/tracing/: engine_trace.h  mask_defines.h  trace.h  trace_filter.h
